@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.82 2005/03/16 09:30:15 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.83 2005/03/19 20:05:23 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Temporarily disabled 'emerge sync' option in PortageTree due to python
+  threading bug.
 
   16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   PartitioningMain calls deactivate() in active notebook page in its
